add new block case

--- a/app/index.html
+++ b/app/index.html
@@ -540,6 +540,38 @@
         <div class="dev-case-title">
           Корпоративный сайт для завода производителя
         </div>
+
+        <div class="dev-case-item-back">
+          <div class="image">
+            <img src="../img/cases/polygal-black.webp" alt="" />
+          </div>
+          <div class="content">
+            <div class="logo">
+              <img src="../img/polygal-logo.webp" alt="" />
+            </div>
+            <div class="actions">
+              <div class="action"><span>стоимость</span> от 300 тыс.руб</div>
+              <div class="action">
+                <img src="../img/wp.webp" alt="" />
+                WordPress
+              </div>
+              <div class="action">
+                <span>срок выполнения:</span>
+                3 месяца
+              </div>
+            </div>
+            <p>
+              Создание корпоративного сайта для производства сотовых
+              поликарбонатных плит в мире, лидера отрасли в конструировании,
+              производстве и инновационных разработках структурных
+              поликарбонатных плит
+            </p>
+
+            <button type="button" class="btn-reset dev-btn--accent">
+              Смотреть кейс
+            </button>
+          </div>
+        </div>
       </div>
       <div class="dev-case-item">
         <a class="dev-case-link" href=""></a>
@@ -589,6 +621,7 @@
   <div class="container">
     <div class="dev-cases-description">
       <picture class="dev-cases-description-bg">
+        <source srcset="../img/code-bg-mobile.svg" media="(max-width: 640px)" />
         <img src="../img/code-bg.webp" alt="" />
       </picture>
       <div class="subtitle">
@@ -629,6 +662,9 @@
       alt=""
       data-trusted-bg="4"
     />
+  </div>
+  <div class="dev-trusted-bg-mobile">
+    <img src="../img/trusted-bg-mobile.webp" alt="" />
   </div>
   <div class="container">
     <h2 class="dev-title dev-trusted-title">
@@ -1967,9 +2003,10 @@
 </section>
 
       <section class="dev-before-footer">
-  <div class="dev-before-footer-img">
+  <picture class="dev-before-footer-img">
+    <source srcset="../img/mobile-footer-bg.webp" media="(max-width: 640px)" />
     <img src="../img/before-footer-img.webp" alt="" />
-  </div>
+  </picture>
 
   <div class="container">
     <div class="dev-before-footer-form">
